public/stylesheets/custom.css
/* ... */
/* Footer */

footer {
  text-align: center;
  margin-left: auto;
  margin-right: auto;
}

footer nav#footer {
  background-color: #fff;
}
footer nav#footer ul li {
  list-style: none;
  display: inline-block;
  padding: 10px;
}

.welcome_message {
    width: 950px;
    text-align: center;
    background-color: #369;
    padding: 20px;
    height: 80px;
    margin-top: -18px;
    position: relative;
    left: -35px;
}
.welcome_message .triangle-l {
 border-color: transparent #036 transparent transparent;
 border-style:solid;
 border-width:15px;
 height:0px;
 width:0px;
 left: -35px;
 top: -3px;
 position: relative;
 z-index: -1;
}

.welcome_message .triangle-r {
 border-color: transparent transparent transparent #036;
 border-style:solid;
 border-width:15px;
 height:0px;
 width:0px;
 left: 955px;
 top: -32px;
 position: relative;
 z-index: -1;
}


.welcome_message h1 { color: #fff; text-shadow: 1px 1px 1px #333; }
.welcome_message h3 { color: #fff; text-shadow: 1px 1px 1px #333; }

.align_to_center { text-align: center; }

#business_done {
    text-align: center;
}

#partners {
    margin-top: 100px;
    text-align: center;
}
#partners h1 {
    font-size: 20px;
}
#partners ul {
    list-style: none;
    margin-left: 30px;
}
#partners ul li {
    display: inline-block;
    font-size: 30px;
    padding-right: 30px;
}

#main_jobs {
    margin: 10 10px 10px 0px;
}
#main_jobs div.positions {
    float: left;
    width: 600px;
    margin-top: 22px;
}
div.positions table {
  margin-top: -22px;
  margin-left: -5px;
  border-bottom: 1px solid #ccc;
}
  div.positions table tr td div.title a {
    font-weight: normal;
    font-size: 16px;
    color: #369;
  }
  div.positions table tr td div.title a:hover {
    text-decoration: underline;
  }
  div.positions table tr td div.company_name {
    font-size: 13px;
    color: #666;
  }
  
  div.positions table tr td.location_date {
    text-align: right;
    font-size: 13px;
  }
  div.positions table tr td.location_date .date {
    color: #999;
  }
 
/*
 * JOBS FEEDS
 */ 
.jobs_feeds {
	background-color: #F9F9F9;
	color: #333;
	padding: 0px;
	margin-top: 20px;
	border: 1px solid #50718f;
}
.jobs_feeds h1 {
	background-color: #50718f;
	color: #FFF;
	padding: 5px;
	font-size: medium;
}
.jobs_feeds h2 {
	color: #333;
	padding: 5px;
	font-size: small;
	position: relative;
}
.jobs_feeds .form {
	margin-bottom: 10px;
}

  
  /*
   * 
   *  HIGHLIGHT AD JOBS
   * 
   */
   div.positions table tr.highlight_even {
   	background-color: #C13100;
    -moz-box-shadow: 0 0 3px #CCC;
    -webkit-box-shadow: 0 0 3px #CCC;
    box-shadow: 0 0 3px #CCC;
    color: #FFF;   	
   }
   div.positions table tr.highlight_even td div.title a { color: #FFF; }
   div.positions table tr.highlight_even td div.company_name { color: #CCC; }
   
   div.positions table tr.highlight_odd {
   	background-color: #369;
    -moz-box-shadow: 0 0 3px #CCC;
    -webkit-box-shadow: 0 0 3px #CCC;
    box-shadow: 0 0 3px #CCC;   	
   }
   div.positions table tr.highlight_odd td div.title a { color: #FFF; }
   div.positions table tr.highlight_odd td div.company_name { color: #CCC; }
   div.positions table tr.highlight_odd td.location_date div.location { color: #CCC; }
  

#main_jobs #jobs_sidebar {
    float: right;
}
#main_jobs #jobs_sidebar #post_a_new_job_button a#link {
background-image: -webkit-gradient(
    linear,
    left bottom,
    left top,
    color-stop(0.29, rgb(20,143,16)),
    color-stop(0.73, rgb(83,171,65))
);
background-image: -moz-linear-gradient(
    center bottom,
    rgb(20,143,16) 29%,
    rgb(83,171,65) 73%
);
	cursor: pointer;
	color: #FFF;
	margin:0 auto;
	padding: 15px;
	display: block;
	font-weight: bolder;
	border:1px solid #53ab41;
}
#main_jobs #jobs_sidebar #post_a_new_job_button a#link:hover {
	text-decoration: none;
}
#main_jobs #jobs_sidebar #post_a_new_job_button p#free_campaign {
	font-size: 16px;
	color: #333;
	text-align: center;
	margin-top: -10px;
	font-family: "Times New Roman", Times, serif;
	font-style: italic;
	font-weight: bolder;
	display: none;
}

a.button {
    text-decoration: none;
    color: #000;
}
.button {
  font:normal 13px arial,helvetica,sans-serif;
  color:#000;
  border:1px solid #ccc;
  border-radius:3px;
  -moz-border-radius:3px;
  -webkit-border-radius:3px;
  background-color:#f6f6f6;
  background-image:linear-gradient(top, #fff, #efefef);
  background-image:-moz-linear-gradient(top, #fff, #efefef);
  background-image:-webkit-gradient(linear, 0% 0%, 0% 100%, from(#fff), to(#efefef));
  filter:progid:DXImageTransform.Microsoft.Gradient(startColorStr=#ffffff, endColorStr=#efefef);
  height:1.9231em;
  padding:0.3em 0.5em;
  cursor:pointer;
  white-space:nowrap;
  overflow:visible; /* fixes width in IE7 */
  outline:0 none /* removes focus outline in IE */}
.button::-moz-focus-inner {border:none} /* removes focus outline in FF */
.button:hover, button:focus {
  border-color:#999;
  background-color:#f0f1f3;
  background-image:linear-gradient(top, #fff, #ebebeb);
  background-image:-moz-linear-gradient(top, #fff, #ebebeb);
  background-image:-webkit-gradient(linear, 0% 0%, 0% 100%, from(#fff), to(#ebebeb));
  filter:progid:DXImageTransform.Microsoft.Gradient(startColorStr=#ffffff, endColorStr=#ebebeb);
  box-shadow:0 0 3px rgba(0,0,0,0.4);
  -moz-box-shadow:0 0 3px rgba(0,0,0,0.4);
  -webkit-box-shadow:0 0 3px rgba(0,0,0,0.4)}
.button:active {
  background-color:#ddd;
  background-image:linear-gradient(top, #ccc, #fff);
  background-image:-moz-linear-gradient(top, #ccc, #fff);
  background-image:-webkit-gradient(linear, 0% 0%, 0% 100%, from(#ccc), to(#fff));
  filter:progid:DXImageTransform.Microsoft.Gradient(startColorStr=#cccccc, endColorStr=#ffffff)
}
/* ... */

